--- a/packages/rpc-electron/package.json
+++ b/packages/rpc-electron/package.json
@@ -28,7 +28,7 @@
     "test": "mocha -r ts-node/register tests/**/*.ts --timeout 5000"
   },
   "devDependencies": {
-    "@wexium/rpc-core": "file:../rpc-core",
+    "@wexium/rpc-core": "^1.0.0",
     "electron": "^33.2.0"
   },
   "peerDependencies": {
