--- a/packages/rpc-node/package.json
+++ b/packages/rpc-node/package.json
@@ -19,10 +19,10 @@
     "prepublishOnly": "npm run build:prod"
   },
   "devDependencies": {
-    "@wexium/rpc-core": "file:../rpc-core"
+    "@wexium/rpc-core": "^1.0.0"
   },
   "peerDependencies": {
-    "@wexium/rpc-core": "*"
+    "@wexium/rpc-core": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
